Fixed issue of mozilla tab view pet section alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -583,7 +583,7 @@ footer{
   text-align: left;
   margin-bottom: 15px;
   padding-right: 0px;
-  font-size-adjust:0.48;
+  font-size-adjust:0.52;
   margin-left: -30px;
   padding-left: 0px;
   font-family: sans-serif;
@@ -880,8 +880,8 @@ footer{
 
 @media (min-width: 1200px){
   .margin-row{
-    margin-left: -50px;
-    margin-right: -50px;
+    margin-left: -5px;
+    margin-right: -5px;
   }
 
   #navbar_logo{
